<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/quest5_tvInfoQualQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest5_tvInfoQualQuest" />

    </LinearLayout>

    <TextView
        android:id="@+id/quest5_tvQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest5_tvQuest"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/quest5_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/quest5_rQualqPer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest5_rQualqPer" />

        <RadioButton
            android:id="@+id/quest5_rPerMens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest5_rPerMens" />

        <RadioButton
            android:id="@+id/quest5_r1SemAntPerMens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest5_r1SemAntPerMens" />

        <RadioButton
            android:id="@+id/quest5_r1SemApsPerMens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest5_r1SemApsPerMens" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/quest5_btAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Anterior" />

        <Button
            android:id="@+id/quest5_btProximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Proximo" />

    </LinearLayout>

</LinearLayout>