<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/menu_tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Menu"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/menu_tvInstrucao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_tvInstrucoes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/menu_btIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_btIniciar" />

    <Button
        android:id="@+id/menu_btGerarCSV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_btGerarCSV" />

    <Button
        android:id="@+id/menu_btSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_btSair" />

</LinearLayout>