<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/quest3_tvInfoQualQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest3_tvInfoQualQuest" />

    </LinearLayout>

    <TextView
        android:id="@+id/quest3_tvQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest3_tvQuest"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/quest3_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/quest3_rS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SIM" />

        <RadioButton
            android:id="@+id/quest3_rN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NAO" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/quest3_btAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Anterior" />

        <Button
            android:id="@+id/quest3_btProximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Proximo" />
    </LinearLayout>

</LinearLayout>