<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/quest7_tvInfoQualQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest7_tvInfoQualQuest" />

    </LinearLayout>

    <TextView
        android:id="@+id/quest7_tvPorQue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest7_tvQuest"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/quest7_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/quest7_rMedo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest7_rMedo" />

        <RadioButton
            android:id="@+id/quest7_rEsquecimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest7_rEsquecimento" />

        <RadioButton
            android:id="@+id/quest7_rVergonha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest7_rVergonha" />

        <RadioButton
            android:id="@+id/quest7_rOutros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest7_rOutros" />

    </RadioGroup>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/quest7_tvOutros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_etSeOutrosOque"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/quest7_etOutros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <Button
                    android:id="@+id/quest7_btAnterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Anterior" />

                <Button
                    android:id="@+id/quest7_btProximo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Proximo" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>