<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/quest4_tvInfoQualQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest4_tvInfoQualQuest" />

    </LinearLayout>

    <TextView
        android:id="@+id/quest4_tvQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest4_tvQuest"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/quest4_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/quest4_rS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SIM" />

        <RadioButton
            android:id="@+id/quest4_rN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NAO" />
    </RadioGroup>

    <TextView
        android:id="@+id/quest4_tvOque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SeSimOque"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/quest4_etOque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <Button
                    android:id="@+id/quest4_btAnterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Anterior" />

                <Button
                    android:id="@+id/quest4_btProximo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Proximo" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>